# patchcords

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
cert/: server_cert.pem
cmake_configs/: proj_config.cmake  proj_testing.cmake  rpi_config.cmake
inc/patchcords/: cord_client.h  cord_socket.h  cord_socket_client.h  cord_tls_client.h  patchcord_client.h  socket_debug_shim.h  xio_client.h  xio_socket.h
samples/: CMakeLists.txt
samples/perf_sample/: CMakeLists.txt  perf_client.c  perf_const.h  perf_server.c
samples/socket_listener/: CMakeLists.txt  socket_listener.c
samples/socket_sample/: CMakeLists.txt  socket_sample.c
samples/sync_socket_sample/: CMakeLists.txt  sync_socket_sample.c
samples/tls_client_listener/: CMakeLists.txt  tls_client_listener.c
samples/tls_client_sample/: CMakeLists.txt  tls_client_sample.c
samples/udp_socket_listener/: CMakeLists.txt  udp_socket_listener.c
samples/udp_socket_sample/: CMakeLists.txt  udp_socket_sample.c
scripts/: build_coverage.sh  build_project.cmd
src/: cord_client_berkley.c  cord_client_openssl.c  cord_client_schannel.c  cord_client_winsock.c  cord_template.c  patchcord_client.c  socket_debug_shim.c  xio_client.c  xio_client_berkley.c  xio_client_winsock.c  xio_socket_template.c
tests/: CMakeLists.txt
tests/cord_client_berkley_ut/: CMakeLists.txt  cord_client_berkley_ut.c  main.c
tests/cord_client_openssl_ut/: CMakeLists.txt  cord_client_openssl_ut.c  main.c
tests/cord_client_winsock_ut/: CMakeLists.txt  cord_client_winsock_ut.c  main.c
tests/patchcord_client_e2e/: CMakeLists.txt  main.c  patchcord_client_e2e.c
tests/patchcord_client_ut/: CMakeLists.txt  main.c  patchcord_client_ut.c
tests/xio_client_berkley_ut/: CMakeLists.txt  main.c  xio_client_berkley_ut.c
tests/xio_client_e2e/: CMakeLists.txt  main.c  xio_client_e2e.c
tests/xio_client_ut/: CMakeLists.txt  main.c  xio_client_ut.c
tests/xio_client_winsock_ut/: CMakeLists.txt  main.c  xio_client_winsock_ut.c
